--- a/tt/ttapp/static/slot.html
+++ b/tt/ttapp/static/slot.html
@@ -1,34 +1,7 @@
-# Ex03 Time Table
-## Date:09/12/2025
-
-## AIM
-To write a html webpage page to display your slot timetable.
-
-## ALGORITHM
-### STEP 1
-Create a Django-admin Interface.
-
-### STEP 2
-Create a static folder and inert HTML code.
-
-### STEP 3
-Create a simple table using ```<table>``` tag in html.
-
-### STEP 4
-Add header row using ```<th>``` tag.
-
-### STEP 5
-Add your timetable using ```<td>``` tag.
-
-### STEP 6
-Execute the program using runserver command.
-
-## PROGRAM
-```
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Slot Time Table - LAVANYA G</title>
+    <title>Slot Time Table - YOUR NAME</title>
 </head>
 <body>
     <IMG SRC="logo.png"HEIGHT="150"WIDTH="500"BORDER=6>
@@ -123,11 +96,3 @@ Execute the program using runserver command.
     </table>
 </body>
 </html>
-```
-
-## OUTPUT
-
-![alt text](<Screenshot 2025-12-09 202138.png>)
-
-## RESULT
-The program for creating slot timetable using basic HTML tags is executed successfully.
